--- a/SourceStack/wwwroot/yy/Forget.html
+++ b/SourceStack/wwwroot/yy/Forget.html
@@ -1,12 +1,22 @@
-﻿@page
-@model SourceStack.Pages.Password.ForgetModel
-@{
-    Layout = "Layout/_Dual";
-    ViewData["Title"] = "忘记密码";
-}
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>忘了·一起帮</title>
+    <link href="/image/logo-big.ico" rel="shortcut icon" media="screen" type="image/x-icon" />
+    <link href="/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
+    <link href="/lib/Content/Content/font-awesome.css" rel="stylesheet" />
+    <script src="/lib/jquery/dist/jquery.js"></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
+</head>
+<body>
 
+    <div class="container">
+        <h2>😭忘了</h2>
+        <hr />
+        <div class="row">
 
-  
+            <form class=" col-md-4 " style="border:1px solid;height:400px">
 
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                     <li class="nav-item" role="presentation">
@@ -21,23 +31,26 @@
                     <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                         <div class="form-group">
                             <label><strong>email：（* 必填）</strong></label>
-                            <input @*asp-for="userforget.email"*@ class="form-control" placeholder="注册时填写的email地址">
-                            <span @*asp-validation-for="userforget.email"*@></span>
+                            <input asp-for="userforget.email" class="form-control" placeholder="注册时填写的email地址">
+                            <span asp-validation-for="userforget.email"></span>
                         </div>
 
                         <label><strong>通过用户名查找email：</strong></label>
                         <div class="input-group ">
 
-                            <input @*asp-for="userforget.username"*@ class="form-control" placeholder="必须全称，且不要忘了点击 搜索 按钮" aria-label="recipient's username" aria-describedby="button-addon2">
+                            <input asp-for="userforget.username" class="form-control" placeholder="必须全称，且不要忘了点击 搜索 按钮" aria-label="recipient's username" aria-describedby="button-addon2">
                             <div class="input-group-append">
                                 <button type="button" class="btn btn-outline-secondary text-primary"><i class="fa fa-search"></i></button>
                             </div>
                         </div>
 
+
+
+
                         <div class="form-group">
                             <label><strong>验证码：（* 必填）</strong> </label>
                             <div>
-                                <input @*asp-for="captcha"*@ class="form-control" style="width:30%;display:inline;">
+                                <input asp-for="captcha" class="form-control" style="width:30%;display:inline;">
                                 <a href="#">看不清楚</a>
                             </div>
                         </div>
@@ -49,7 +62,7 @@
                         <label><strong>QQ:</strong> </label>
                         <div class="input-group ">
 
-                            <input @*asp-for="userforget.username"*@ class="form-control" placeholder="支持从头开始的模糊查询" aria-label="recipient's username" aria-describedby="button-addon2">
+                            <input asp-for="userforget.username" class="form-control" placeholder="支持从头开始的模糊查询" aria-label="recipient's username" aria-describedby="button-addon2">
                             <div class="input-group-append">
                                 <button type="button" class="btn btn-outline-secondary"><i class="fa fa-search"></i>查找</button>
                             </div>
@@ -57,7 +70,7 @@
                         <label><strong>Email:</strong> </label>
                         <div class="input-group ">
 
-                            <input @*asp-for="userforget.username"*@ class="form-control" placeholder="支持从头开始的模糊查询" aria-label="recipient's username" aria-describedby="button-addon2">
+                            <input asp-for="userforget.username" class="form-control" placeholder="支持从头开始的模糊查询" aria-label="recipient's username" aria-describedby="button-addon2">
                             <div class="input-group-append">
                                 <button type="button" class="btn btn-outline-secondary"><i class="fa fa-search"></i>查找</button>
                             </div>
@@ -65,13 +78,20 @@
                     </div>
 
                 </div>
-           
-            @section Description{
+
+
+            </form>
+
+
+            <aside class="col-md-5 offset-md-2 " style="margin-top:20px;margin-bottom:20px;">
+                <h2 style="color:darkblue"><i class="fa fa-question"></i>   说明</h2>
                 <ol>
                     <li>重置密码的邮件会发送到你填写的Email中。</li>
                     <li>输入用户名之后，还要点击旁边的🔎按钮，以完成Email地址的填写。</li>
                     <li>现目前，还没有针对未激活Email做特殊提示，请务必确保Email正确。</li>
                 </ol>
-            }
-            
-
+            </aside>
+        </div>
+    </div>
+</body>
+</html>
