--- a/JSHomeWork/wwwroot/JsHomework.html
+++ b/JSHomeWork/wwwroot/JsHomework.html
@@ -6,13 +6,13 @@
 </head>
 <body>
     <script type="text/javascript">
-        alert("找到一个好工作！");
-        var sname = "lzb";
-        alert(sname);
-        sname = "lw";
-        alert(sname);
-        sname = "zl";
-        alert(sname);      
+        //alert("找到一个好工作！");
+        //var sname = "lzb";
+        //alert(sname);
+        //sname = "lw";
+        //alert(sname);
+        //sname = "zl";
+        //alert(sname);      
     </script>
     <script src="/js/site.js"></script>
 </body>
