使用“模拟名称空间”技术

--- a/JSHomeWork/wwwroot/JsHomework.html
+++ b/JSHomeWork/wwwroot/JsHomework.html
@@ -46,6 +46,7 @@
 </head>
 <body>
 
-    <script src="/js/JSFuc.js"></script>
+   <!-- <script src="/js/JSFuc.js"></script>-->
+    <script src="js/nameSpace.js"></script>
 </body>
 </html>
