--- a/JSHomeWork/wwwroot/jstest.html
+++ b/JSHomeWork/wwwroot/jstest.html
@@ -71,22 +71,31 @@
     //var sname = "飞哥";
 
       //  var age = 100;
-        function outFunc(sname) {
-           // var age = 0;
-            function innerFunc() {
-                alert(age);   //age定义在innerFunc()之外
-            }
-            innerFunc();
-            var age = 0;
-        } 
-        outFunc();
+        //function outFunc(sname) {
+        //   // var age = 0;
+        //    function innerFunc() {
+        //        alert(age);   //age定义在innerFunc()之外
+        //    }
+        //    innerFunc();
+        //    var age = 0;
+        //} 
+        //outFunc();
 
-        var China = {};
-        China.Chongqing = {};
-        China.Chongqing.LuckyStack = {};
-        China.Chongqing.LuckyStack.wpz = function () {
-            console.log('i m 111');
-        }
+        //var China = {};
+        //China.Chongqing = {};
+        //China.Chongqing.LuckyStack = {};
+        //China.Chongqing.LuckyStack.wpz = function () {
+        //    console.log('i m 111');
+        //}
+        var str = [1, 18, 7, 92, 2].sort();
+        console.log(str);
+        var fruits = ['Apple', 'Banana'];
+        var newLength = fruits.unshift('Strawberry');
+        console.log(newLength);
+
+
+
+
 </script>
 
 </head>
