--- a/JSHomeWork/wwwroot/JsHomework.html
+++ b/JSHomeWork/wwwroot/JsHomework.html
@@ -45,8 +45,23 @@
    
 </head>
 <body>
+    <table>
+        <thead>
+            <tr>
+                <th>真实姓名</th>
+                <th>QQ昵称</th>
+                <th>年龄</th>
+                <th>性别</th>
+                <th>兴趣爱好</th>
+                <th>自我介绍</th>
+            </tr>
+        </thead>
 
-   <!-- <script src="/js/JSFuc.js"></script>-->
-    <script src="js/nameSpace.js"></script>
+        <tbody id="tbody">
+        </tbody>
+    </table>
+    <!--<script src="/js/JSFuc.js"></script>-->
+    <!--  <script src="js/nameSpace.js"></script>-->
+    <script src="js/Built-int.js"></script>
 </body>
 </html>
