--- a/JSHomeWork/wwwroot/JsHomework.html
+++ b/JSHomeWork/wwwroot/JsHomework.html
@@ -41,8 +41,8 @@
 
 
     </script>-->
-  <!--  <script src="/js/site.js"></script>-->
-   
+    <!--  <script src="/js/site.js"></script>-->
+
 </head>
 <body>
     <table>
@@ -60,8 +60,9 @@
         <tbody id="tbody">
         </tbody>
     </table>
-    <!--<script src="/js/JSFuc.js"></script>-->
-    <!--  <script src="js/nameSpace.js"></script>-->
+    <script src="/js/JSFuc.js"></script>
+    <script src="js/nameSpace.js"></script>
     <script src="js/Built-int.js"></script>
+    <script src="js/BOM.js"></script>
 </body>
 </html>
