部分作业修改

--- a/JSHomeWork/wwwroot/ProblemIndex.html
+++ b/JSHomeWork/wwwroot/ProblemIndex.html
@@ -11,12 +11,12 @@
     <form method="post" style="border :2px solid pink">
         <div class="form-group">
             <label for="exampleInputEmail1">密码：（* 必填） </label>
-            <input type="password" class="form-control" name="password" id="inputpassword">
+            <input type="password" class="form-control" name="password" id="password">
             <div style="display: none">密码长度不能小于4</div>
         </div>
         <div class="form-group">
             <label for="exampleInputEmail1">验证密码：（* 必填） </label>
-            <input type="password" class="form-control" name="password" id="cofirmpassword" placeholder="和密码相同">
+            <input type="password" class="form-control" name="cofirmpassword" id="cofirmpassword" placeholder="和密码相同">
             <div style="display: none">密码错误</div>
         </div>
         <button type="submit">提交</button>
@@ -87,7 +87,7 @@
             </span>
 
         </div>
-        <h2><span class="text-white" style="background-color:orange" name="state">协助中</span> Windows Server 2016安装Web Farm问题</h2>
+        <h2><span class="text-white"  zl-state tyle="background-color:orange" name="state">协助中</span> Windows Server 2016安装Web Farm问题</h2>
         <p>
             Windows Server 2016通过Web Paltform或直接下载都无法安装Web Farm问题具体详情描述参考：http://www.kungge.com/kungge/2733.html
             <a href="/Problem/Edit/@problem.Id" style="color:black">……</a>
@@ -122,12 +122,12 @@
                 <span>@5</span>
             </span>
         </div>
-        <h2><span class="text-white" style="background-color:orange" name="state">协助中</span> Windows Server 2016安装Web Farm问题</h2>
+        <h2><span class="text-white" zl-state style="background-color:orange" name="state">协助中</span> Windows Server 2016安装Web Farm问题</h2>
         <p>
             Windows Server 2016通过Web Paltform或直接下载都无法安装Web Farm问题具体详情描述参考：http://www.kungge.com/kungge/2733.html
             <a href="/Problem/Edit/@problem.Id" style="color:black">……</a>
         </p>
-        <label name="keyword">
+        <label name="keywords">
             <strong><i class="fa fa-tags"></i>关键字： </strong>
 
             <span class="text-white badge bg-dark">编程开发语言</span>
@@ -162,7 +162,7 @@
                 <span>@5</span>
             </span>
         </div>
-        <h2><span class="text-white" style="background-color:pink" name="state">已撤销</span> Windows Server 2016安装Web Farm问题</h2>
+        <h2><span class="text-white" zl-state style="background-color:pink" name="state">已撤销</span> Windows Server 2016安装Web Farm问题</h2>
         <p>
             Windows Server 2016通过Web Paltform或直接下载都无法安装Web Farm问题具体详情描述参考：http://www.kungge.com/kungge/2733.html
             <a href="/Problem/Edit/@problem.Id" style="color:black">……</a>
