--- a/JSHomeWork/wwwroot/ProblemIndex.html
+++ b/JSHomeWork/wwwroot/ProblemIndex.html
@@ -8,6 +8,7 @@
     <button id="pre">前一页</button>
     <button id="next">后一页</button>
     <a id="goto"> 跳转</a>
+    <input type="text" id="wz" value="http://www.baidu.com" />
     <form method="post" style="border :2px solid pink">
         <div class="form-group">
             <label for="exampleInputEmail1">密码：（* 必填） </label>
@@ -192,18 +193,3 @@
     <script src="js/DOM.js"></script>
 </body>
 </html>
-<!--//作业
-//模拟求助首页，并：
-//   统计有多少个悬赏大于1的求助
-//   将状态为“协助中”的求助背景改成灰黑色
-//   如果总结数为0，将其从DOM树中删除
-//   写一个函数getKeywordsCount() ，可以统计某个求助使用了多少关键字
-
-//参考用户注册页面，显示错误提示：
-//   密码的长度不能小于4
-//    密码和确认密码必须一致
-//参考用户资料页面，控制台显示出用户的：性别 / 出生年月 / 关注（关键字）/ 自我介绍
-//实现铃铛（没有学bootstrap的同学用文字代替）闪烁效果-->
-<!--一个“前一页”按钮，点击可以跳到上一页；一个“下一页”按钮，点击可以跳到下一页；
-一个a标签，点击不会跳转到href指定页面，而是将href的值赋值给下面的一个文本框，
-一个“转到”按钮，点击该按钮页面可跳转到文本框指定的网址页面-->
