--- a/SourceStack/wwwroot/Write.html
+++ b/SourceStack/wwwroot/Write.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <link href="/image/logo-big.ico" rel="shortcut icon" media="screen" type="image/x-icon" />
-    <title>个人资料·一起帮</title>
+    <title>个人资料·一起帮test</title>
     <link href="/lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="/lib/Content/Content/font-awesome.css" rel="stylesheet" />
     <script src="../lib/jquery/dist/jquery.js"></script>
