--- a/JSHomeWork/wwwroot/border.html
+++ b/JSHomeWork/wwwroot/border.html
@@ -1,12 +1,12 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
-</head>
-<body>
-    <h1>我是Border页面</h1>
-    <button>提交</button>
+﻿
 
-</body>
-</html>
+    <h1>我是Borderifame页面</h1>
+    <a href="/test.html">跳转</a>
+    <button type="button">提交</button>
+    <script>
+        document.getElementsByTagName("button")[0].addEventListener("click", function () {
+            window.parent.document.getElementsByTagName("p")[0].innerText = "background-color: pink;";
+        }
+    </script>
+
+
